--- a/app/src/main/res/layout-land/activity_image.xml
+++ b/app/src/main/res/layout-land/activity_image.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,7 +25,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
-            android:layout_above="@+id/color_button_container"/>
+            android:layout_above="@+id/color_button_container"
+            android:src="@drawable/default_background_image"
+            android:scaleType="centerCrop"/>
 
         <RelativeLayout
             android:id="@+id/color_button_container"
@@ -154,7 +154,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_centerInParent="true"
-            android:weightSum="2">
+            android:weightSum="3">
 
             <RelativeLayout
                 android:layout_width="0dp"
@@ -165,8 +165,10 @@
                     android:id="@+id/choose_from_gallery"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_image"
-                    android:layout_centerInParent="true"/>
+                    android:src="@drawable/ic_image_large"
+                    android:layout_centerInParent="true"
+                    android:clickable="true"
+                    android:background="?attr/selectableItemBackground"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -178,8 +180,25 @@
                     android:id="@+id/choose_from_camera"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_photo_camera"
-                    android:layout_centerInParent="true"/>
+                    android:src="@drawable/ic_photo_camera_large"
+                    android:layout_centerInParent="true"
+                    android:clickable="true"
+                    android:background="?attr/selectableItemBackground"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/choose_from_web"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/ic_cloud_download_large"
+                    android:layout_centerInParent="true"
+                    android:clickable="true"
+                    android:background="?attr/selectableItemBackground"/>
             </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
