--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -236,11 +234,19 @@
                 android:layout_marginTop="5dp"/>
 
             <Button
+                android:id="@+id/pick_random_color"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pick_random_color"
+                android:layout_below="@+id/pick"
+                android:layout_marginTop="5dp"/>
+
+            <Button
                 android:id="@+id/pick_from_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/pick_color_from_image"
-                android:layout_below="@+id/pick"
+                android:layout_below="@+id/pick_random_color"
                 android:layout_marginTop="5dp"/>
 
             <RelativeLayout
