--- a/app/src/main/res/menu/menu_activity_image.xml
+++ b/app/src/main/res/menu/menu_activity_image.xml
@@ -13,4 +13,10 @@
         android:title="@string/capture_image"
         android:icon="@drawable/ic_photo_camera"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_web"
+        android:title="@string/image_from_web"
+        android:icon="@drawable/ic_cloud_download"
+        app:showAsAction="always"/>
 </menu>
