--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -163,6 +163,31 @@
                     android:minHeight="40dp"
                     android:background="@color/black">
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical"
+                        android:weightSum="2">
+
+                        <ImageView
+                            android:id="@+id/load_color"
+                            android:layout_width="wrap_content"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="5dp"
+                            android:src="@drawable/ic_folder_open"
+                            android:layout_marginBottom="3dp"/>
+
+                        <ImageView
+                            android:id="@+id/save_color"
+                            android:layout_width="wrap_content"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="5dp"
+                            android:src="@drawable/ic_save" />
+                    </LinearLayout>
+
                     <TextView
                         android:id="@+id/rgb_display"
                         android:layout_width="wrap_content"
