--- a/app/src/main/res/layout-land/activity_image.xml
+++ b/app/src/main/res/layout-land/activity_image.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".App.ImageActivity">
 
     <android.support.v7.widget.Toolbar
@@ -36,7 +37,7 @@
             android:layout_alignParentBottom="true"
             android:padding="3dp"
             android:visibility="gone"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimaryTransparent">
 
             <TextView
                 android:layout_width="40dp"
@@ -161,13 +162,14 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/choose_from_gallery"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_image_large"
+                    app:srcCompat="@drawable/ic_image_large"
                     android:layout_centerInParent="true"
                     android:clickable="true"
+                    android:tint="@color/colorPrimaryTransparent"
                     android:background="?attr/selectableItemBackground"/>
             </RelativeLayout>
 
@@ -176,13 +178,14 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/choose_from_camera"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_photo_camera_large"
+                    app:srcCompat="@drawable/ic_photo_camera_large"
                     android:layout_centerInParent="true"
                     android:clickable="true"
+                    android:tint="@color/colorPrimaryTransparent"
                     android:background="?attr/selectableItemBackground"/>
             </RelativeLayout>
 
@@ -191,13 +194,14 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content">
 
-                <ImageView
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/choose_from_web"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/ic_cloud_download_large"
+                    app:srcCompat="@drawable/ic_cloud_download"
                     android:layout_centerInParent="true"
                     android:clickable="true"
+                    android:tint="@color/colorPrimaryTransparent"
                     android:background="?attr/selectableItemBackground"/>
             </RelativeLayout>
         </LinearLayout>
