--- a/app/src/main/res/layout-port/activity_image.xml
+++ b/app/src/main/res/layout-port/activity_image.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".App.ImageActivity">
 
     <android.support.v7.widget.Toolbar
@@ -37,7 +37,7 @@
             android:layout_alignParentBottom="true"
             android:padding="3dp"
             android:visibility="gone"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimaryTransparent">
 
             <TextView
                 android:layout_width="40dp"
@@ -151,54 +151,102 @@
 
         <LinearLayout
             android:id="@+id/button_container"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_centerInParent="true"
             android:weightSum="3">
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:orientation="horizontal"
                 android:layout_weight="1">
 
-                <ImageView
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+                    android:fontFamily="@font/abel"
+                    android:text="@string/image_from_gallery"
+                    android:textColor="@color/colorPrimaryTransparent"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/choose_from_gallery"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/ic_image_large"
-                    android:layout_centerInParent="true"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    app:srcCompat="@drawable/ic_image_large"
                     android:clickable="true"
-                    android:background="?attr/selectableItemBackground"/>
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="20dp"
+                    android:tint="@color/colorPrimaryTransparent"
+                    android:background="?attr/selectableItemBackground"
+                    android:elevation="10dp"/>
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_gravity="center_horizontal"
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
-                <ImageView
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:fontFamily="@font/abel"
+                    android:text="@string/image_from_camera"
+                    android:textColor="@color/colorPrimaryTransparent"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/choose_from_camera"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/ic_photo_camera_large"
-                    android:layout_centerInParent="true"
+                    android:layout_width="90dp"
+                    android:layout_weight="1"
+                    android:layout_height="90dp"
+                    app:srcCompat="@drawable/ic_photo_camera_large"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="20dp"
                     android:clickable="true"
+                    android:tint="@color/colorPrimaryTransparent"
                     android:background="?attr/selectableItemBackground"/>
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_weight="1">
 
-                <ImageView
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:fontFamily="@font/abel"
+                    android:text="@string/image_from_web"
+                    android:textColor="@color/colorPrimaryTransparent"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <android.support.v7.widget.AppCompatImageView
                     android:id="@+id/choose_from_web"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/ic_cloud_download_large"
-                    android:layout_centerInParent="true"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    app:srcCompat="@drawable/ic_cloud_download"
                     android:clickable="true"
+                    android:layout_centerVertical="true"
+                    android:tint="@color/colorPrimaryTransparent"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="20dp"
                     android:background="?attr/selectableItemBackground"/>
             </RelativeLayout>
         </LinearLayout>
