--- a/app/src/main/res/layout/activity_color_selection.xml
+++ b/app/src/main/res/layout/activity_color_selection.xml
@@ -42,10 +42,11 @@
         android:id="@+id/no_items"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="50dp"
+        android:layout_margin="40dp"
         android:textColor="@color/grey"
         android:text="@string/no_colors_saved_yet"
         android:gravity="center"
         android:textStyle="bold"
+        android:textSize="17sp"
         android:layout_centerInParent="true" />
 </RelativeLayout>
