--- a/base-feature/src/main/res/layout-port/activity_image.xml
+++ b/base-feature/src/main/res/layout-port/activity_image.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".App.ImageActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -175,7 +175,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/choose_from_gallery"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
@@ -206,7 +206,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/choose_from_camera"
                     android:layout_width="90dp"
                     android:layout_weight="1"
@@ -237,7 +237,7 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <android.support.v7.widget.AppCompatImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/choose_from_web"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
