--- a/base-feature/src/main/res/layout/activity_color_selection.xml
+++ b/base-feature/src/main/res/layout/activity_color_selection.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".App.ColorSelectionActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         android:fitsSystemWindows="false"
         android:background="@color/colorPrimary"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/saved_colors"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
