--- a/base-feature/src/main/res/values/styles.xml
+++ b/base-feature/src/main/res/values/styles.xml
@@ -31,4 +31,11 @@
     <style name="showCaseView.text.title" parent="showCaseView.text">
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="SplashTheme" parent="AppTheme.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@android:color/darker_gray</item>
+    </style>
 </resources>
