--- a/base-feature/src/main/res/layout/activity_main.xml
+++ b/base-feature/src/main/res/layout/activity_main.xml
@@ -174,7 +174,7 @@
                 <RelativeLayout
                     android:id="@+id/color_container"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="130dp"
                     android:background="@color/black"
                     android:padding="4dp">
 
@@ -210,7 +210,35 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
-                        android:weightSum="3">
+                        android:weightSum="4">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
+
+                            <TextView
+                                android:id="@+id/name_display"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:fontFamily="@font/abel"
+                                android:text="Name: Black"
+                                android:textColor="@color/white"
+                                android:textSize="18sp" />
+
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/name_copy"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                app:srcCompat="@drawable/ic_copy"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignTop="@id/name_display"
+                                android:background="?selectableItemBackgroundBorderless"
+                                android:clickable="true"
+                                android:layout_marginRight="3dp"
+                                android:layout_alignBottom="@id/name_display"/>
+                        </RelativeLayout>
 
                         <RelativeLayout
                             android:layout_width="match_parent"
