--- a/app/src/main/res/layout/dialog_edit_hsv.xml
+++ b/app/src/main/res/layout/dialog_edit_hsv.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:hint="H"
+        android:hint="@string/h"
         android:inputType="numberDecimal"
         android:selectAllOnFocus="true"
         android:imeOptions="actionNext"
@@ -24,7 +24,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:hint="S"
+        android:hint="@string/s"
         android:inputType="numberDecimal"
         android:selectAllOnFocus="true"
         android:imeOptions="actionNext"
@@ -36,7 +36,7 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:hint="V"
+        android:hint="@string/v"
         android:inputType="numberDecimal"
         android:selectAllOnFocus="true"
         android:imeOptions="actionDone"
