--- a/app/src/main/res/layout/dialog_color_rename.xml
+++ b/app/src/main/res/layout/dialog_color_rename.xml
@@ -5,14 +5,12 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/dialog_hex"
+        android:id="@+id/dialog_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:inputType="textCapCharacters"
-        android:hint="@string/hex_code"
-        android:maxLength="7"
+        android:hint="@string/choose_name"
         android:importantForAutofill="no"
-        android:digits="0123456789ABCDEF"/>
+        android:inputType="textCapWords" />
 </FrameLayout>
