--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,14 @@
     tools:context=".ui.activity.MainActivity"
     android:background="@color/window_background_color">
 
-    <include layout="@layout/toolbar" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/colorPrimary"
+        android:theme="@style/toolbarStyle"
+        android:elevation="1dp"/>
 
     <ScrollView
         android:layout_width="match_parent"
