--- a/image/src/main/res/layout/activity_image.xml
+++ b/image/src/main/res/layout/activity_image.xml
@@ -6,14 +6,153 @@
     android:layout_height="match_parent"
     tools:context=".ui.ImageActivity">
 
-    <include layout="@layout/toolbar" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/colorPrimary"
+        android:theme="@style/toolbarStyle"
+        android:elevation="1dp"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/default_background_image">
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toTopOf="@+id/color_button_container"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/default_background_image"
+            android:scaleType="centerCrop"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/color_button_container"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="3dp"
+            android:visibility="gone"
+            android:background="@color/colorPrimaryTransparent">
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/vibrant_color"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="VC"
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/vibrant_color"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@color/black50"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/light_vibrant_color"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="LVC"
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/light_vibrant_color"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@color/black50"
+                app:layout_constraintStart_toEndOf="@+id/vibrant_color"
+                android:layout_marginStart="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/dark_vibrant_color"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="DVC"
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/dark_vibrant_color"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@color/black50"
+                app:layout_constraintStart_toEndOf="@+id/light_vibrant_color"
+                android:layout_marginStart="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/muted_color"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="MC"
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/muted_color"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@color/black50"
+                app:layout_constraintStart_toEndOf="@+id/dark_vibrant_color"
+                android:layout_marginStart="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/light_muted_color"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="LMC"
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/light_muted_color"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@color/black50"
+                app:layout_constraintStart_toEndOf="@+id/muted_color"
+                android:layout_marginStart="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="@id/dark_muted_color"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="LMC"
+                android:gravity="center"
+                android:textColor="@android:color/white"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/dark_muted_color"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:srcCompat="@color/black50"
+                app:layout_constraintStart_toEndOf="@+id/light_muted_color"
+                android:layout_marginStart="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/selected_color"
+                android:layout_width="59dp"
+                android:layout_height="match_parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@color/black50"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container_choose_from_gallery"
