--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,12 +10,11 @@
     <color name="blue">#00F</color>
     <color name="gray">#989898</color>
     <color name="transparent">#0000</color>
-    <color name="white_dark">#f1f1f1</color>
+    <color name="white_transparent">#80FFFFFF</color>
     <color name="gray_light">#BBB</color>
     <color name="window_background_color">#FAFAFA</color>
 
     <!-- Button colors -->
-    <color name="enabled">@color/colorPrimary</color>
     <color name="disabled">@color/gray_light</color>
     <color name="button_color">@color/colorPrimary</color>
     <color name="button_color_transparent">@color/colorPrimaryTransparent</color>
