--- a/image/src/main/res/layout/activity_image.xml
+++ b/image/src/main/res/layout/activity_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ImageActivity">
+    tools:context=".ui.activity.ImageActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -18,17 +18,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/default_background_image"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <com.skydoves.colorpickerview.ColorPickerView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/color_button_container"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/default_background_image"
-            android:scaleType="centerCrop"/>
+            app:palette="@drawable/palette"
+            app:selector="@drawable/wheel" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/color_button_container"
@@ -36,8 +37,7 @@
             android:layout_height="65dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:padding="3dp"
-            android:visibility="gone"
-            android:background="@color/colorPrimaryTransparent">
+            android:background="@color/white_transparent">
 
             <TextView
                 android:layout_width="40dp"
@@ -45,16 +45,18 @@
                 app:layout_constraintStart_toStartOf="@id/vibrant_color"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="VC"
-                android:gravity="center"
-                android:textColor="@android:color/white"/>
+                android:gravity="center"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/vibrant_color"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@color/black50"
+                android:background="@drawable/tear_button_left"
+                app:srcCompat="@drawable/done"
+                android:padding="10dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="5dp"/>
 
             <TextView
                 android:layout_width="40dp"
@@ -62,17 +64,19 @@
                 app:layout_constraintStart_toStartOf="@id/light_vibrant_color"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="LVC"
-                android:gravity="center"
-                android:textColor="@android:color/white"/>
+                android:gravity="center"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/light_vibrant_color"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@color/black50"
+                android:background="@drawable/tear_button_middle"
+                app:srcCompat="@drawable/done"
+                android:padding="10dp"
                 app:layout_constraintStart_toEndOf="@+id/vibrant_color"
                 android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="5dp"/>
 
             <TextView
                 android:layout_width="40dp"
@@ -80,17 +84,19 @@
                 app:layout_constraintStart_toStartOf="@id/dark_vibrant_color"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="DVC"
-                android:gravity="center"
-                android:textColor="@android:color/white"/>
+                android:gravity="center"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/dark_vibrant_color"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@color/black50"
+                android:background="@drawable/tear_button_right"
+                app:srcCompat="@drawable/done"
+                android:padding="10dp"
                 app:layout_constraintStart_toEndOf="@+id/light_vibrant_color"
                 android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="5dp"/>
 
             <TextView
                 android:layout_width="40dp"
@@ -98,17 +104,19 @@
                 app:layout_constraintStart_toStartOf="@id/muted_color"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="MC"
-                android:gravity="center"
-                android:textColor="@android:color/white"/>
+                android:gravity="center"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/muted_color"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@color/black50"
+                android:background="@drawable/tear_button_left"
+                app:srcCompat="@drawable/done"
+                android:padding="10dp"
                 app:layout_constraintStart_toEndOf="@+id/dark_vibrant_color"
                 android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="5dp"/>
 
             <TextView
                 android:layout_width="40dp"
@@ -116,17 +124,19 @@
                 app:layout_constraintStart_toStartOf="@id/light_muted_color"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="LMC"
-                android:gravity="center"
-                android:textColor="@android:color/white"/>
+                android:gravity="center"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/light_muted_color"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@color/black50"
+                android:background="@drawable/tear_button_middle"
+                app:srcCompat="@drawable/done"
+                android:padding="10dp"
                 app:layout_constraintStart_toEndOf="@+id/muted_color"
                 android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="5dp"/>
 
             <TextView
                 android:layout_width="40dp"
@@ -134,129 +144,29 @@
                 app:layout_constraintStart_toStartOf="@id/dark_muted_color"
                 app:layout_constraintTop_toTopOf="parent"
                 android:text="LMC"
-                android:gravity="center"
-                android:textColor="@android:color/white"/>
+                android:gravity="center"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/dark_muted_color"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                app:srcCompat="@color/black50"
+                android:background="@drawable/tear_button_right"
+                app:srcCompat="@drawable/done"
+                android:padding="10dp"
                 app:layout_constraintStart_toEndOf="@+id/light_muted_color"
                 android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:elevation="5dp"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/selected_color"
                 android:layout_width="59dp"
                 android:layout_height="match_parent"
+                android:padding="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@color/black50"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container_choose_from_gallery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/container_choose_from_photo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/choose_from_gallery"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/image"
-                android:background="?selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:focusable="true"
-                android:tint="@color/colorPrimary"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/choose_from_gallery"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:fontFamily="@font/abel"
-                android:text="@string/image_from_gallery"
-                android:textColor="@color/colorPrimaryTransparent"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container_choose_from_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/container_choose_from_gallery"
-            app:layout_constraintBottom_toTopOf="@+id/container_choose_from_url"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/choose_from_photo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/camera"
-                android:background="?selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:focusable="true"
-                android:tint="@color/colorPrimary"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/choose_from_photo"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:fontFamily="@font/abel"
-                android:text="@string/image_from_camera"
-                android:textColor="@color/colorPrimaryTransparent"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container_choose_from_url"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/container_choose_from_photo"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/choose_from_url"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/download"
-                android:background="?selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:focusable="true"
-                android:tint="@color/colorPrimary"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/choose_from_url"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:fontFamily="@font/abel"
-                android:text="@string/image_from_web"
-                android:textColor="@color/colorPrimaryTransparent"
-                android:textSize="18sp"
-                android:textStyle="bold"/>
+                android:background="@drawable/tear_button_left"
+                app:srcCompat="@drawable/done"
+                android:elevation="5dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
