--- a/app/src/main/res/drawable/camera.xml
+++ b/app/src/main/res/drawable/camera.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright © 2019 Marc Auberer. All rights reserved.
+  -->
+
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="24dp"
         android:height="24dp"
