--- a/app/src/main/res/drawable/delete_forever.xml
+++ b/app/src/main/res/drawable/delete_forever.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright © 2019 Marc Auberer. All rights reserved.
+  -->
+
 <vector android:height="24dp" android:tint="#BF0000"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
