--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright © 2019 Marc Auberer. All rights reserved.
+  -->
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
