--- a/image/src/main/res/values/colors.xml
+++ b/image/src/main/res/values/colors.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright © 2019 Marc Auberer. All rights reserved.
+  -->
+
 <resources>
     <!-- Pix image picker -->
     <color name="colorPrimaryPix">@color/colorPrimary</color>
