--- a/image/src/main/res/values/string.xml
+++ b/image/src/main/res/values/string.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright © 2019 Marc Auberer. All rights reserved.
+  -->
+
 <resources>
     <!-- ImageActivity -->
     <string name="approve_image_picker_permission">Approve permissions to use the image picker</string>
