Extract all colors to string resources

--- a/app/src/main/res/values/strings_colors.xml
+++ b/app/src/main/res/values/strings_colors.xml
@@ -18,6 +18,131 @@
     <string name="color_brown">Brown</string>
     <string name="color_burly_wood">Burly Wood</string>
     <string name="color_cadet_blue">Cadet Blue</string>
-
+    <string name="color_chartreuse">Chartreuse</string>
+    <string name="color_chocolate">Chocolate</string>
+    <string name="color_coral">Coral</string>
+    <string name="color_cornflower_blue">Cornflower Blue</string>
+    <string name="color_cornsilk">Cornsilk</string>
+    <string name="color_crimson">Crimson</string>
+    <string name="color_cyan">Cyan</string>
+    <string name="color_dark_blue">Dark Blue</string>
+    <string name="color_dark_cyan">Dark Cyan</string>
+    <string name="color_dark_golden_rod">Dark Golden Rod</string>
+    <string name="color_dark_gray">Dark Gray</string>
+    <string name="color_dark_green">Dark Green</string>
+    <string name="color_dark_khaki">Dark Khaki</string>
+    <string name="color_dark_magenta">Dark Magenta</string>
+    <string name="color_dark_olive_green">Dark Olive Green</string>
+    <string name="color_dark_orange">Dark Orange</string>
+    <string name="color_dark_orchid">Dark Orchid</string>
+    <string name="color_dark_red">Dark Red</string>
+    <string name="color_dark_salmon">Dark Salmon</string>
+    <string name="color_dark_sea_green">Dark Sea Green</string>
+    <string name="color_dark_slate_blue">Dark Slate Blue</string>
+    <string name="color_dark_late_gray">Dark Slate Gray</string>
+    <string name="color_dark_turquoise">Dark Turquoise</string>
+    <string name="color_dark_violet">Dark Violet</string>
+    <string name="color_deep_pink">Deep Pink</string>
+    <string name="color_deep_sky_blue">Deep Sky Blue</string>
+    <string name="color_dim_gray">Dim Gray</string>
+    <string name="color_dodger_blue">Dodger Blue</string>
+    <string name="color_fire_brick">Fire Brick</string>
+    <string name="color_floral_white">Floral White</string>
+    <string name="color_forest_green">Forest Green</string>
+    <string name="color_fuchsia">Fuchsia</string>
+    <string name="color_gainsboro">Gainsboro</string>
+    <string name="color_ghost_white">Ghost White</string>
+    <string name="color_gold">Gold</string>
+    <string name="color_golden_rod">Golden Rod</string>
+    <string name="color_gray">Gray</string>
+    <string name="color_green">Green</string>
+    <string name="color_green_yellow">Green Yellow</string>
+    <string name="color_honey_dew">Honey Dew</string>
+    <string name="color_hot_pink">Hot Pink</string>
+    <string name="color_indian_red">Indian Red</string>
+    <string name="color_indigo">Indigo</string>
+    <string name="color_ivory">Ivory</string>
+    <string name="color_khaki">Khaki</string>
+    <string name="color_lavender">Lavender</string>
+    <string name="color_lavender_blush">Lavender Blush</string>
+    <string name="color_lawn_green">Lawn Green</string>
+    <string name="color_lemon_chiffon">Lemon Chiffon</string>
+    <string name="color_light_blue">Light Blue</string>
+    <string name="color_light_coral">Light Coral</string>
+    <string name="color_light_cyan">Light Cyan</string>
+    <string name="color_light_golden_rod_yellow">Light Golden Rod Yellow</string>
+    <string name="color_light_gray">Light Gray</string>
+    <string name="color_light_green">Light Green</string>
+    <string name="color_light_pink">Light Pink</string>
+    <string name="color_light_salmon">Light Salmon</string>
+    <string name="color_light_sea_green">Light Sea Green</string>
+    <string name="color_light_sky_blue">Light Sky Blue</string>
+    <string name="color_light_slate_gray">Light Slate Gray</string>
+    <string name="color_light_steel_blue">Light Steel Blue</string>
+    <string name="color_light_yellow">Light Yellow</string>
+    <string name="color_lime">Lime</string>
+    <string name="color_lime_green">Lime Green</string>
+    <string name="color_linen">Linen</string>
+    <string name="color_magenta">Magenta</string>
+    <string name="color_maroon">Maroon</string>
+    <string name="color_medium_aqua_marine">Medium Aqua Marine</string>
+    <string name="color_medium_blue">Medium Blue</string>
+    <string name="color_medium_orchid">Medium Orchid</string>
+    <string name="color_medium_purple">Medium Purple</string>
+    <string name="color_medium_sea_green">Medium Sea Green</string>
+    <string name="color_medium_slate_blue">Medium Slate Blue</string>
+    <string name="color_medium_spring_green">Medium Spring Green</string>
+    <string name="color_medium_turquoise">Medium Turquoise</string>
+    <string name="color_medium_violet_red">Medium Violet Red</string>
+    <string name="color_midnight_blue">Midnight Blue</string>
+    <string name="color_mint_cream">Mint Cream</string>
+    <string name="color_misty_rose">Misty Rose</string>
+    <string name="color_moccasin">Moccasin</string>
+    <string name="color_navajo_white">Navajo White</string>
+    <string name="color_navy">Navy</string>
+    <string name="color_old_lace">Old Lace</string>
+    <string name="color_olive">Olive</string>
+    <string name="color_olive_drab">Olive Drab</string>
+    <string name="color_orange">Orange</string>
+    <string name="color_orange_red">Orange Red</string>
+    <string name="color_orchid">Orchid</string>
+    <string name="color_pale_golden_rod">Pale Golden Rod</string>
+    <string name="color_pale_green">Pale Green</string>
+    <string name="color_pale_turquoise">Pale Turquoise</string>
+    <string name="color_pale_violet_red">Pale Violet Red</string>
+    <string name="color_papaya_whip">Papaya Whip</string>
+    <string name="color_peach_puff">Peach Puff</string>
+    <string name="color_peru">Peru</string>
+    <string name="color_pink">Pink</string>
+    <string name="color_plum">Plum</string>
+    <string name="color_powder_blue">Powder Blue</string>
+    <string name="color_purple">Purple</string>
+    <string name="color_red">Red</string>
+    <string name="color_rosy_brown">Rosy Brown</string>
+    <string name="color_royal_blue">Royal Blue</string>
+    <string name="color_saddle_brown">Saddle Brown</string>
+    <string name="color_salmon">Salmon</string>
+    <string name="color_sandy_brown">Sandy Brown</string>
+    <string name="color_sea_green">Sea Green</string>
+    <string name="color_sea_shell">Sea Shell</string>
+    <string name="color_sienna">Sienna</string>
+    <string name="color_silver">Silver</string>
+    <string name="color_sky_blue">Sky Blue</string>
+    <string name="color_slate_blue">Slate Blue</string>
+    <string name="color_slate_gray">Slate Gray</string>
+    <string name="color_snow">Snow</string>
+    <string name="color_spring_green">Spring Green</string>
+    <string name="color_steel_blue">Steel Blue</string>
+    <string name="color_tan">Tan</string>
+    <string name="color_teal">Teal</string>
+    <string name="color_thistle">Thistle</string>
+    <string name="color_tomato">Tomato</string>
+    <string name="color_turquoise">Turquoise</string>
+    <string name="color_violet">Violet</string>
+    <string name="color_wheat">Wheat</string>
+    <string name="color_white">White</string>
+    <string name="color_white_smoke">White Smoke</string>
+    <string name="color_yellow">Yellow</string>
+    <string name="color_yellow_green">Yellow Green</string>
 
 </resources>
