Improve code style

--- a/image/src/main/res/menu/menu_activity_image.xml
+++ b/image/src/main/res/menu/menu_activity_image.xml
@@ -9,7 +9,7 @@
 
     <item
         android:id="@+id/action_new_image"
-        android:title="@string/new_iamge"
+        android:title="@string/new_image"
         android:icon="@drawable/replay"
         app:showAsAction="ifRoom"/>
 </menu>
