--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
                 android:text="@string/selection_"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:textColor="@drawable/button_outline_text"
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <SeekBar
