Translate strings in image module & fix color typo

--- a/app/src/main/res/values-de/strings_colors.xml
+++ b/app/src/main/res/values-de/strings_colors.xml
@@ -127,7 +127,7 @@
     <string name="color_sea_green">Seegrün</string>
     <string name="color_sea_shell">Muschel</string>
     <string name="color_sienna">Ocker</string>
-    <string name="color_silver">Silbert</string>
+    <string name="color_silver">Silber</string>
     <string name="color_sky_blue">Himmelblau</string>
     <string name="color_slate_blue">Schieferblau</string>
     <string name="color_slate_gray">Schiefergrau</string>
