--- a/image/src/main/res/values/string.xml
+++ b/image/src/main/res/values/string.xml
@@ -6,7 +6,7 @@
 <resources>
     <!-- ImageActivity -->
     <string name="approve_image_picker_permission">Approve permissions to use the image picker</string>
-    <string name="rgb_">RGB: %1$s, %2$s, %3$s</string>
-    <string name="hex_">HEX: %s</string>
-    <string name="hsv_">HSV: %1$s, %2$s, %3$s</string>
+    <string name="rgb_" translatable="false">RGB: %1$s, %2$s, %3$s</string>
+    <string name="hex_" translatable="false">HEX: %s</string>
+    <string name="hsv_" translatable="false">HSV: %1$s, %2$s, %3$s</string>
 </resources>
