Prepare for release

--- a/app/src/main/res/layout/activity_color_selection.xml
+++ b/app/src/main/res/layout/activity_color_selection.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/transparent"
+        android:background="@android:color/transparent"
         android:theme="@style/toolbarStyle"
         android:elevation="1dp"/>
 
