--- a/app/src/main/res/xml-v25/shortcuts.xml
+++ b/app/src/main/res/xml-v25/shortcuts.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright © 2019 Marc Auberer. All rights reserved.
+  ~ Copyright © Marc Auberer 2020. All rights reserved
   -->
 
 <shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
@@ -13,8 +13,8 @@
         android:shortcutDisabledMessage="@string/shortcut_disabled">
         <intent
             android:action="android.intent.action.VIEW"
-            android:targetPackage="com.mrgames13.jimdo.colorconverter"
-            android:targetClass="com.mrgames13.jimdo.colorconverter.ui.activity.MainActivity">
+            android:targetPackage="com.chillibits.colorconverter"
+            android:targetClass="com.chillibits.colorconverter.ui.activity.MainActivity">
             <extra android:name="action" android:value="image" />
         </intent>
         <categories android:name="android.shortcut.app" />
