--- a/app/src/main/res/values-es/strings_colors.xml
+++ b/app/src/main/res/values-es/strings_colors.xml
@@ -4,8 +4,8 @@
  Project: Color Converter Colors
  Release: Working copy
  Locale: es, Spanish
- Exported by: M&R Games
- Exported at: Fri, 27 Dec 2019 20:40:20 +0000
+ Exported by: ChilliBits
+ Exported at: Wed, 22 Jan 2020 15:45:48 +0000
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="color_alice_blue">Azul Alicia</string>
